@startuml

title __DASHBOARD's Class Diagram__\n

  namespace com.example.search_eat_pis {
    namespace ui.dashboard {
      class com.example.search_eat_pis.ui.dashboard.DashboardFragment {
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace ui.dashboard {
      class com.example.search_eat_pis.ui.dashboard.DashboardViewModel {
          - mText : MutableLiveData<String>
          + DashboardViewModel()
          + getText()
      }
    }
  }
  

  com.example.search_eat_pis.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  com.example.search_eat_pis.ui.dashboard.DashboardFragment o-- com.example.search_eat_pis.databinding.FragmentDashboardBinding : binding
  com.example.search_eat_pis.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
